First working UI, remove original folder from Git

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,7 @@
     <script src="phaser.js"></script>
     <!-- /build -->
     <!-- NOTE: Add third-party library scripts here. -->
+    <script src="lib/slick-ui.min.js"></script>
     <!-- build:js game.min.js -->
     <script src="game.js"></script>
     <!-- /build -->
